# pico-template

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main.dis  main.elf  main.elf.map  main.hex  main.uf2
